samples/_failures_safe/1761419158_f77717_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09484e0f.c: In function ‘read_matrix’:
./samples/SAFE/__tmp_09484e0f.c:131:13: error: expected expression at end of input
  131 |             m->data[i][
      |             ^
./samples/SAFE/__tmp_09484e0f.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09484e0f.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09484e0f.c:131:13: error: expected declaration or statement at end of input
